--- a/EOEOSystem/loginScreen.xaml
+++ b/EOEOSystem/loginScreen.xaml
@@ -3,12 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EOEOSystem"
+        xmlns:uc="clr-namespace:EOEOSystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="350"
+        Title="MainWindow"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        AllowsTransparency="True" Background="Transparent">
+        Style="{StaticResource loginWindowStyle}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -26,11 +25,12 @@
 
         <Border Grid.RowSpan="5"
             Grid.ColumnSpan="3"
-            CornerRadius="15">
+                CornerRadius="15">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#EB12B9" Offset="0"/>
-                    <GradientStop Color="#1558BC" Offset="1"/>
+                    <GradientStop Color="#1558BC" Offset="0.4"/>
+                    <GradientStop Color="#EB12B9" Offset="0.8"/>
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
@@ -43,7 +43,7 @@
                 Foreground="White"
                 BorderBrush="White"
                 BorderThickness="1.5"
-                FontSize="12"
+                FontSize="10"
                 Click="ExitBtn_Click">
             <Button.Resources>
                 <Style TargetType="Border">
@@ -121,15 +121,9 @@
                    Grid.Row="5"
                    HorizontalAlignment="Center">
             <Button 
+                Style="{StaticResource buttonLoginStyle}"
                 Grid.Row="5"
-                Width="100"
-                Height="50" 
                 Content="Logowanie"
-                Background="Transparent"
-                Foreground="White"
-                BorderBrush="White"
-                BorderThickness="1.5"
-                FontSize="16"
                 Click="LoginBtn_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
