--- a/EOEOSystem/loginScreen.xaml
+++ b/EOEOSystem/loginScreen.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:uc="clr-namespace:EOEOSystem"
+        xmlns:uc="clr-namespace:EOEOSystem" xmlns:local="clr-namespace:EOEOSystem.CustomControl"
         mc:Ignorable="d"
         Title="MainWindow"
         WindowStartupLocation="CenterScreen"
@@ -26,7 +26,7 @@
         <Border Grid.RowSpan="5"
             Grid.ColumnSpan="3"
                 CornerRadius="15">
-            <Border.Background>
+            <Border.Background >
                 <LinearGradientBrush>
                     <GradientStop Color="#EB12B9" Offset="0"/>
                     <GradientStop Color="#1558BC" Offset="0.4"/>
@@ -52,70 +52,24 @@
             </Button.Resources>
         </Button>
 
-        <StackPanel Grid.Column="1" Grid.Row="1"
-                    VerticalAlignment="Center">
-            <Image Source="Assets/firefighter.png" 
-                   RenderOptions.BitmapScalingMode="HighQuality" 
-                   Height="120"/>
-            
-            <TextBlock Text="EOEO System" 
-                       TextAlignment="Center" 
-                       FontSize="25" 
-                       FontFamily="Calibri" 
-                       Foreground="White" />
-        </StackPanel>
+        <local:LogoBox 
+            Grid.Column="1"
+            Grid.Row="1"
+            VerticalAlignment="Center"/>
 
-        <StackPanel VerticalAlignment="Center" 
-                    Grid.Row="2" 
-                    Grid.Column="1">
-            <WrapPanel>
-                <Image Source="Assets/gasMask.png"
-                   Height="16"/>
-                <TextBlock Text="Login"
-                           FontFamily="Calibri" 
-                           Foreground="White"
-                           FontSize="14"
-                           Margin="10 0 0 0"/>
-            </WrapPanel>
-            <TextBox Height="30"
-                     BorderBrush="Transparent"
-                     FontSize="18"
-                     VerticalAlignment="Center"
-                     VerticalContentAlignment="Center"
-                     Foreground="White"
-                     Name="loginTb">
-                <TextBox.Background>
-                    <SolidColorBrush Color="White" 
-                                     Opacity="0.2"/>
-                </TextBox.Background>
-            </TextBox>
-        </StackPanel>
+        <local:IconTitleTextBox 
+            x:Name="loginTb"
+            Title="Login"
+            Source="Assets/gasMask.png"
+            Grid.Row="2"
+            Grid.Column="1"/>
 
-        <StackPanel VerticalAlignment="Center" 
+        <local:IconTitlePasswordBox
+                    x:Name="passwordTb"
+                    Title="Login"
+                    Source="Assets/axe.png"
                     Grid.Row="3" 
-                    Grid.Column="1">
-            <WrapPanel>
-                <Image Source="Assets/axe.png"
-                   Height="16"/>
-                <TextBlock Text="Hasło"
-                           FontFamily="Calibri" 
-                           Foreground="White"
-                           FontSize="14"
-                           Margin="10 0 0 0"/>
-            </WrapPanel>
-            <PasswordBox Height="30"
-                     BorderBrush="Transparent"
-                     FontSize="18"
-                     VerticalAlignment="Center"
-                     VerticalContentAlignment="Center"
-                     Foreground="White"
-                     Name="passwordTb">
-                <PasswordBox.Background>
-                    <SolidColorBrush Color="White" 
-                                     Opacity="0.2"/>
-                </PasswordBox.Background>
-            </PasswordBox>
-        </StackPanel>
+                    Grid.Column="1"/>
 
         <WrapPanel Grid.Column="1" 
                    Grid.Row="5"
